--- a/_sass/addon/variables.scss
+++ b/_sass/addon/variables.scss
@@ -23,5 +23,5 @@ $code-font-size: 0.85rem !default;
 
 /* fonts */
 
-$font-family-base: 'Source Sans Pro', 'Microsoft Yahei', sans-serif;
-$font-family-heading: Lato, 'Microsoft Yahei', sans-serif;
+$font-family-base: 'DM Sans', Garamond, 'Microsoft Yahei', sans-serif;
+$font-family-heading: 'DM Sans', 'Microsoft Yahei', sans-serif;
